All_pages_estilos_css
le añadi a todas las paginas el mismo css
y le modifique algunos detalles

--- a/Paginas/Pagina PRODUCTOS/Caj18RosFer.html
+++ b/Paginas/Pagina PRODUCTOS/Caj18RosFer.html
@@ -14,7 +14,7 @@
 
         <link rel="stylesheet" href="../font.css">
 
-        <link rel="stylesheet" href="EstilosPAGINA.css">
+        <link rel="stylesheet" href="../../Estilos.CSS">
 
         <style>
             @import url('https://fonts.googleapis.com/css2?family=Fleur+De+Leah&display=swap');
