--- a/Paginas/Pagina PRODUCTOS/Ram36Rosas.html
+++ b/Paginas/Pagina PRODUCTOS/Ram36Rosas.html
@@ -9,8 +9,7 @@
         <meta name="keywords" content="envio de flores, latin flores, flores express, floreria en linea, enviar flores, argentina, Floreria capital federal, floreria buenos aires, enviar express, chocolates, peluches, osos, regalos flores, flores regalos, flores buenos aires, flores capital federal"/>
         <meta charset="utf-8"/>
         <link rel="stylesheet" href="font.css">
-        <link rel="stylesheet" href="ESTILOS.CSS">
-        
+        <link rel="stylesheet" href="../../Estilos.CSS">        
         
 </head>
 
