--- a/Paginas/Pagina PRODUCTOS/Caj25Rosas.html
+++ b/Paginas/Pagina PRODUCTOS/Caj25Rosas.html
@@ -104,13 +104,13 @@
 
 <!-- Producto seleccionado -->
 
-    <aside id="ProductoSeleccionado">
+    <aside id="productoseleccionado">
                 
     <h2 class="tituloproducto">Caja de 25 Rosas Rosadas</h2>
 
       
   <div class="imagenproducto">
-            <img src="PRODUCTOS/Caja 25 ROSAS ROSADAS.jpg" alt="">  </div>
+            <img src="productos/Caja 25 ROSAS ROSADAS.jpg" alt="">  </div>
 
         <!-- opciones de productos -->
 <div class="opcionesproducto">
@@ -182,7 +182,7 @@
         <h2 class="adic">ADICIONALES</h2>
 
     <div class="ferrero">  FERRERO ROCHER 
-        <img class="produadic" src="PRODUCTOS/ADICIONALES/Ferrero rocher.jpg" alt="">
+        <img class="produadic" src="productos/ADICIONALES/Ferrero rocher.jpg" alt="">
         <form action="">
             <div> 100gr
             <input type="checkbox" name="aceptar" value="1"/></div>
