--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <meta charset="utf-8"/>
 
         <link rel="stylesheet" href="font.css">
-
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
         <link rel="stylesheet" href="Estilos.CSS">
 
         <style>
@@ -132,7 +132,7 @@
 
         <div class="product-item" category="Rosas">
                     <a href="Paginas/Pagina PRODUCTOS/Caj18RosFer.html">
-                    <img src="imagenes/PRODUCTOS/Caja 18 Rosas Ferrero.jpg" alt="" >
+                    <img src="imagenes/PRODUCTOS/Caj18RosFer.jpg" alt="" >
                     <a href="#"> Caja 18 Rosas Ferrero</a></a>
         </div>
 
