--- a/Paginas/Pagina Header/Como_comprar.html
+++ b/Paginas/Pagina Header/Como_comprar.html
@@ -13,8 +13,7 @@
         <meta charset="utf-8"/>
 
         <link rel="stylesheet" href="../font.css">
-
-        <link rel="stylesheet" href="Estilosheader.CSS">
+        <link rel="stylesheet" href="../../Estilos.CSS">
 
         <style>
             @import url('https://fonts.googleapis.com/css2?family=Fleur+De+Leah&display=swap');
