--- a/Paginas/Pagina PRODUCTOS/CajFerRosDiam.HTML
+++ b/Paginas/Pagina PRODUCTOS/CajFerRosDiam.HTML
@@ -31,7 +31,7 @@
         <header class="border">
         <ol class="secciondearriba">
 
-            <div class="Seccion"><li>NOSOTROS</li></div>
+            <div class="Seccion"><li><a href="../../index.html">NOSOTROS</a> </li></div>
 
             <div class="Seccion"><li><a href="../Pagina Header/fechas_especiales.html"> Fechas Especiales </a></li></div>
 
@@ -50,7 +50,7 @@
                     <a href="http://instagram.com/aflorar.arg" class="icon icon-instagram" target="_blank"></a>
             </div>
 
-        <h1 class="EnvioFlores">Envio Flores</h1>
+        <img class="logo_en_producto" src="../../imagenes/EnvioFlores_PNG.png" alt="">
 
 
 
