--- a/Paginas/Pagina Header/Costos_envio.html
+++ b/Paginas/Pagina Header/Costos_envio.html
@@ -13,7 +13,7 @@
         <meta charset="utf-8"/>
 
         <link rel="stylesheet" href="../font.css">
-        <link rel="stylesheet" href="Estilosheader.CSS">
+        <link rel="stylesheet" href="../../Estilos.CSS">
 
         <style>
             @import url('https://fonts.googleapis.com/css2?family=Fleur+De+Leah&display=swap');
@@ -128,9 +128,187 @@
 </section>
 
 
+            <!-- INFORMACION SOBRE COSTOS DE ENVIO -->
+ 
+    <div>
+        <table>
+            
+        <H1>COSTOS DE ENVIO</H1>
 
-
-
+    <p>
+        Los costos de envio varian segun la zona de entrega. Los precios a continuacion son de zonas de envio DENTRO DE CAPITAL FEDERAL Y GRAN BUENOS AIRES.
+        Para verificar cual es su costo de envio, por favor seleccione la zona de entrega
+    </p>
+                                 
+     <tr><td align="right">Localidad / Barrio:<td><select name=localidaddestinatario onchange="actualizar();"><option value='0|$|0'>--seleccionar--</option>
+            <option value='304|$|399.00'>CAPITAL FEDERAL $ 399.00</option>
+            <option value='171|$|749.00'>Acassuso $ 749.00</option>
+            <option value='172|$|1690.00'>Adrogue $ 1690.00</option>
+            <option value='173|$|1199.00'>Aldo Bonzi $ 1199.00</option>
+            <option value='174|$|2590.00'>Alejandro Korn $ 2590.00</option>
+            <option value='158|$|1990.00'>Almirante Brown $ 1990.00</option>
+            <option value='175|$|1899.00'>Alvarez Francisco $ 1899.00</option>
+            <option value='145|$|799.00'>Avellaneda $ 799.00</option>
+            <option value='176|$|799.00'>Bancalari $ 799.00</option>
+            <option value='177|$|1290.00'>Banfield $ 1290.00</option>
+            <option value='178|$|899.00'>Beccar $ 899.00</option>
+            <option value='179|$|1290.00'>Bella Vista $ 1290.00</option>
+            <option value='180|$|1290.00'>Benavidez $ 1290.00</option>
+            <option value='165|$|1690.00'>Berazategui $ 1690.00</option>
+            <option value='181|$|1290.00'>Bernal $ 1290.00</option>
+            <option value='182|$|699.00'>Boulogne sur mer $ 699.00</option>
+            <option value='183|$|1690.00'>Burzaco $ 1690.00</option>
+            <option value='184|$|1190.00'>Campo de Mayo $ 1190.00</option>
+            <option value='185|$|1990.00'>Canning $ 1990.00</option>
+            <option value='169|$|2590.00'>Cañuelas $ 2590.00</option>
+            <option value='186|$|2590.00'>Capilla del Señor $ 2590.00</option>
+            <option value='187|$|499.00'>Carapachay $ 499.00</option>
+            <option value='188|$|1099.00'>Caraza $ 1099.00</option>
+            <option value='190|$|2390.00'>Carlos Spegazzini $ 2390.00</option>
+            <option value='189|$|899.00'>Carupa $ 899.00</option>
+            <option value='191|$|699.00'>Caseros $ 699.00</option>
+            <option value='192|$|1199.00'>Castelar $ 1199.00</option>
+            <option value='197|$|699.00'>Chilavert $ 699.00</option>
+            <option value='193|$|949.00'>Ciudad Evita $ 949.00</option>
+            <option value='194|$|799.00'>Ciudad Jardín $ 799.00</option>
+            <option value='195|$|699.00'>Ciudadela $ 699.00</option>
+            <option value='196|$|1799.00'>Claypole $ 1799.00</option>
+            <option value='198|$|1290.00'>Del Viso $ 1290.00</option>
+            <option value='199|$|2190.00'>Derqui $ 2190.00</option>
+            <option value='200|$|799.00'>Dock Sud $ 799.00</option>
+            <option value='201|$|1199.00'>Don Bosco $ 1199.00</option>
+            <option value='202|$|899.00'>Don Torcuato $ 899.00</option>
+            <option value='203|$|1699.00'>El Jaguel $ 1699.00</option>
+            <option value='204|$|899.00'>El Palomar $ 899.00</option>
+            <option value='205|$|990.00'>El Talar de Pacheco $ 990.00</option>
+            <option value='163|$|1890.00'>Escobar $ 1890.00</option>
+            <option value='156|$|1990.00'>Esteban Echeverría $ 1990.00</option>
+            <option value='206|$|2790.00'>Exaltacion de la Cruz $ 2790.00</option>
+            <option value='160|$|1699.00'>Ezeiza $ 1699.00</option>
+            <option value='207|$|1599.00'>Ezpeleta $ 1599.00</option>
+            <option value='208|$|2090.00'>Fátima $ 2090.00</option>
+            <option value='211|$|1199.00'>Fiorito $ 1199.00</option>
+            <option value='164|$|1699.00'>Florencio Varela $ 1699.00</option>
+            <option value='209|$|1699.00'>Florencio Varela $ 1699.00</option>
+            <option value='210|$|399.00'>Florida $ 399.00</option>
+            <option value='212|$|1590.00'>Garin $ 1590.00</option>
+            <option value='213|$|1099.00'>General Pacheco $ 1099.00</option>
+            <option value='168|$|1990.00'>General Rodríguez $ 1990.00</option>
+            <option value='215|$|899.00'>Gerli $ 899.00</option>
+            <option value='214|$|2090.00'>Glew $ 2090.00</option>
+            <option value='216|$|1699.00'>Gonzalez Catán $ 1699.00</option>
+            <option value='217|$|1290.00'>Grand Bourg $ 1290.00</option>
+            <option value='218|$|2490.00'>Guernica $ 2490.00</option>
+            <option value='219|$|1699.00'>Guillon Luis $ 1699.00</option>
+            <option value='220|$|1990.00'>Gutierrez $ 1990.00</option>
+            <option value='221|$|899.00'>Haedo $ 899.00</option>
+            <option value='222|$|1699.00'>Hudson $ 1699.00</option>
+            <option value='146|$|1090.00'>Hurlingham $ 1090.00</option>
+            <option value='226|$|1290.00'>Ing Bunge $ 1290.00</option>
+            <option value='225|$|1199.00'>Ing Pablo Nogues $ 1199.00</option>
+            <option value='224|$|1699.00'>Ingeniero Maschwitz $ 1699.00</option>
+            <option value='223|$|1199.00'>Isidro Casanova $ 1199.00</option>
+            <option value='151|$|1290.00'>Ituzaingó $ 1290.00</option>
+            <option value='159|$|1599.00'>José C. Paz $ 1599.00</option>
+            <option value='227|$|699.00'>José Ingenieros $ 699.00</option>
+            <option value='228|$|799.00'>José León Suarez $ 799.00</option>
+            <option value='229|$|1699.00'>José Marmol $ 1699.00</option>
+            <option value='230|$|599.00'>La Lucila $ 599.00</option>
+            <option value='153|$|1199.00'>La Matanza $ 1199.00</option>
+            <option value='303|$|2690.00'>La Plata $ 2690.00</option>
+            <option value='231|$|1790.00'>La Reja $ 1790.00</option>
+            <option value='232|$|1390.00'>La Salada $ 1390.00</option>
+            <option value='233|$|899.00'>La Tablada $ 899.00</option>
+            <option value='234|$|1599.00'>Laferrere Gregorio $ 1599.00</option>
+            <option value='147|$|990.00'>Lanús $ 990.00</option>
+            <option value='235|$|1699.00'>Lavallol $ 1699.00</option>
+            <option value='236|$|1599.00'>Libertad $ 1599.00</option>
+            <option value='237|$|1290.00'>Loma Hermosa $ 1290.00</option>
+            <option value='149|$|1290.00'>Lomas de Zamora $ 1290.00</option>
+            <option value='238|$|799.00'>Lomas del Mirador $ 799.00</option>
+            <option value='239|$|1990.00'>Longchamps $ 1990.00</option>
+            <option value='240|$|2990.00'>Los Cardales $ 2990.00</option>
+            <option value='241|$|1199.00'>Los Polvorines $ 1199.00</option>
+            <option value='242|$|699.00'>Lourdes $ 699.00</option>
+            <option value='302|$|2690.00'>Luj&aacute;n $ 2690.00</option>
+            <option value='243|$|699.00'>Malaver $ 699.00</option>
+            <option value='157|$|1299.00'>Malvinas Argentinas $ 1299.00</option>
+            <option value='244|$|2490.00'>Manzanares $ 2490.00</option>
+            <option value='166|$|2190.00'>Marcos Paz $ 2190.00</option>
+            <option value='245|$|2199.00'>Mariano Acosta $ 2199.00</option>
+            <option value='246|$|699.00'>Martin Coronado $ 699.00</option>
+            <option value='247|$|699.00'>Martinez $ 699.00</option>
+            <option value='248|$|1890.00'>Mathew $ 1890.00</option>
+            <option value='155|$|1599.00'>Merlo $ 1599.00</option>
+            <option value='249|$|1199.00'>Monte Chingolo $ 1199.00</option>
+            <option value='250|$|1690.00'>Monte Grande $ 1690.00</option>
+            <option value='161|$|1699.00'>Moreno $ 1699.00</option>
+            <option value='148|$|1099.00'>Morón $ 1099.00</option>
+            <option value='252|$|1290.00'>Muñiz $ 1290.00</option>
+            <option value='251|$|499.00'>Munro $ 499.00</option>
+            <option value='253|$|1490.00'>Nordelta $ 1490.00</option>
+            <option value='254|$|599.00'>Olivos $ 599.00</option>
+            <option value='257|$|799.00'>Pablo Podesta $ 799.00</option>
+            <option value='258|$|2290.00'>Parque industrial Pilar $ 2290.00</option>
+            <option value='255|$|1290.00'>Parque Leloir $ 1290.00</option>
+            <option value='256|$|1599.00'>Paso del Rey $ 1599.00</option>
+            <option value='167|$|1890.00'>Pilar $ 1890.00</option>
+            <option value='259|$|1899.00'>Pontevedra $ 1899.00</option>
+            <option value='162|$|2690.00'>Presidente Perón $ 2690.00</option>
+            <option value='152|$|1290.00'>Quilmes $ 1290.00</option>
+            <option value='260|$|1690.00'>Rafael Calzada $ 1690.00</option>
+            <option value='261|$|1099.00'>Rafael Castillo $ 1099.00</option>
+            <option value='263|$|799.00'>Ramos Mejia $ 799.00</option>
+            <option value='264|$|1699.00'>Ranelagh $ 1699.00</option>
+            <option value='262|$|1090.00'>Remedios de Escalada $ 1090.00</option>
+            <option value='265|$|599.00'>Saenz Peña $ 599.00</option>
+            <option value='267|$|599.00'>San Andres $ 599.00</option>
+            <option value='266|$|1399.00'>San Antonio de Padua $ 1399.00</option>
+            <option value='144|$|899.00'>San Fernando $ 899.00</option>
+            <option value='268|$|1499.00'>San Francisco Solano $ 1499.00</option>
+            <option value='142|$|799.00'>San Isidro $ 799.00</option>
+            <option value='269|$|1099.00'>San Justo $ 1099.00</option>
+            <option value='141|$|599.00'>San Martín $ 599.00</option>
+            <option value='154|$|1290.00'>San Miguel $ 1290.00</option>
+            <option value='170|$|2690.00'>San Vicente $ 2690.00</option>
+            <option value='270|$|599.00'>Santos Lugares $ 599.00</option>
+            <option value='271|$|899.00'>Sarandi $ 899.00</option>
+            <option value='272|$|990.00'>Sordeaux $ 990.00</option>
+            <option value='273|$|899.00'>Tapiales $ 899.00</option>
+            <option value='274|$|1399.00'>Temperley $ 1399.00</option>
+            <option value='150|$|1199.00'>Tigre $ 1199.00</option>
+            <option value='280|$|799.00'>Tomkinson $ 799.00</option>
+            <option value='275|$|1290.00'>Tortuguitas $ 1290.00</option>
+            <option value='143|$|699.00'>Tres de Febrero $ 699.00</option>
+            <option value='276|$|2190.00'>Tristan Suarez $ 2190.00</option>
+            <option value='277|$|699.00'>Tropezon $ 699.00</option>
+            <option value='278|$|1699.00'>Trujuy $ 1699.00</option>
+            <option value='279|$|1599.00'>Turdera $ 1599.00</option>
+            <option value='281|$|699.00'>Valentin Alsina $ 699.00</option>
+            <option value='140|$|399.00'>Vicente López $ 399.00</option>
+            <option value='282|$|799.00'>Victoria $ 799.00</option>
+            <option value='283|$|599.00'>Villa Adelina $ 599.00</option>
+            <option value='284|$|799.00'>Villa Ballester $ 799.00</option>
+            <option value='285|$|699.00'>Villa Bosch $ 699.00</option>
+            <option value='286|$|899.00'>Villa Caraza $ 899.00</option>
+            <option value='287|$|899.00'>Villa Celina $ 899.00</option>
+            <option value='288|$|1199.00'>Villa de Mayo $ 1199.00</option>
+            <option value='289|$|1099.00'>Villa Domínico $ 1099.00</option>
+            <option value='290|$|990.00'>Villa Insuperable $ 990.00</option>
+            <option value='291|$|1099.00'>Villa Luzuriaga $ 1099.00</option>
+            <option value='292|$|599.00'>Villa Lynch $ 599.00</option>
+            <option value='293|$|899.00'>Villa Madero $ 899.00</option>
+            <option value='294|$|599.00'>Villa Maipu $ 599.00</option>
+            <option value='295|$|499.00'>Villa Martelli $ 499.00</option>
+            <option value='296|$|1099.00'>Villa Tesei $ 1099.00</option>
+            <option value='298|$|2299.00'>Virrey del Pino $ 2299.00</option>
+            <option value='297|$|799.00'>Virreyes $ 799.00</option>
+            <option value='299|$|1099.00'>Wilde $ 1099.00</option>
+            <option value='300|$|1290.00'>William Morris $ 1290.00</option>
+            <option value='301|$|1990.00'>Zelaya $ 1990.00</option>
+        </select>
+        </table>
+    </div>
         <!--------------- FOOTER  ------------------>
 
 
