--- a/Paginas/Pagina Header/Registrate.html
+++ b/Paginas/Pagina Header/Registrate.html
@@ -13,7 +13,7 @@
         <meta charset="utf-8"/>
 
         <link rel="stylesheet" href="../font.css">
-        <link rel="stylesheet" href="Estilosheader.CSS">
+        <link rel="stylesheet" href="../../Estilos.CSS">
 
         <style>
             @import url('https://fonts.googleapis.com/css2?family=Fleur+De+Leah&display=swap');
@@ -75,61 +75,12 @@
 
         </div>
 
-                    <!-- CATEGORIAS -->
-
-
-
-        <nav class="border">Elija una Categoria
-
-
-
-
-        <section id="Categoria" class="border">
-
-
-        <div class="category_list">
-            <a href="#" class="category_item ct_item-active" category="TODOS"> TODOS</a>
-            <a href="#" class="Category_item" category="Rosas"> Rosas</a>
-            <a href="#" class="Category_item" category="Floreros"> Floreros</a>
-            <a href="#" class="Category_item" category="Canastas"> Canastas</a>
-            <a href="#" class="Category_item" category="Comestibles"> Comestibles</a>
-            <a href="#" class="Category_item" category="Desayunos"> Desayunos</a>
-    </div>
-
-
-
-        </nav>
-
-</section>
-
-
-
-
-
-
-<!-- OCACIONES -->
-
-<section id="Categoria" class="border">
-
-
-    <div class="category_list">
-        <a href="#" class="category_item ct_item-active" category="TODOS"> Casamiento</a>
-        <a href="#" class="Category_item" category="Rosas"> Condolencias</a>
-        <a href="#" class="Category_item" category="Floreros"> Nacimiento</a>
-        <a href="#" class="Category_item" category="Canastas"> Feliz Cumpleaños</a>
-        <a href="#" class="Category_item" category="Comestibles"> San Valentin</a>
-        <a href="#" class="Category_item" category="Desayunos"> Dia de la madre</a>
-</div>
-
-
-
-    </nav>
-
-</section>
 
 <!-- datos de registro -->
 <hr>
-<form action="">
+<form  id="registro" action="">
+
+
      <label for="Buscar Producto"> Buscar Producto</label>
     <input type="text" name="Buscar Producto" placeholder="Buscar Producto"> <br>
      <label for="Email">Email</label>
