--- a/Paginas/Pagina PRODUCTOS/Caj50RosFer.html
+++ b/Paginas/Pagina PRODUCTOS/Caj50RosFer.html
@@ -31,8 +31,8 @@
         <header class="border">
         <ol class="secciondearriba">
 
-            <div class="Seccion"><li>NOSOTROS</li></div>
-
+            <div class="Seccion"><li><a href="../../index.html">NOSOTROS</a> </li></div>
+            
             <div class="Seccion"><li><a href="../Pagina Header/fechas_especiales.html"> Fechas Especiales </a></li></div>
 
             <div class="Seccion"><li><a href="../Pagina Header/Costos_envio.html">Costos de envio</a></li></div>
