--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                     <img src="IMAGENES/EnvioFlores_2.png" class="d-flex" alt="...">
                   </div>
                   <div class="carousel-item">
-                    <img src="IMAGENES/EnvioFlores_3.png" class="d-flex" alt="...">
+                    <img src="imagenes/EnvioFlores_4.png" class="d-flex" alt="...">
                   </div>
                 </div>
                 <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
@@ -87,6 +87,7 @@
                 </button>
               </div>
 
+              <!-- Fin carrusel -->
 
 
 
@@ -130,7 +131,9 @@
 
     </section>
 
-<!-- OCACIONES -->
+    <!-- fin categorias -->
+
+    <!-- OCACIONES -->
 
 <section id="Categoria" class="border">
 
@@ -150,52 +153,53 @@
 
 </section>
 
+<!-- fin ocaciones -->
 
                 <!-- PRODUCTOS -->
 
 
     <section id="Productos" class="ListadeProductos">
 
-                    <!-- ROSAS -->
+        <!------------------------ ROSAS ---------------------->
 
         <div class="product-item" category="Rosas">
             <a href="Paginas\Pagina PRODUCTOS/CajFerRosDiam.HTML">
-                <img src="imagenes/PRODUCTOS/Caja Ferrero Rosas diamante.jpg" alt="" >
-                <a href="#"> Caja Rosas Diamante con Ferrero Rocher</a></a>
+            <img src="imagenes/PRODUCTOS/Caja Ferrero Rosas diamante.jpg" alt="" >
+            <a href="#"> Caja Rosas Diamante con Ferrero Rocher</a></a>
         </div>
 
         <div class="product-item" category="Rosas">
-                    <a href="Paginas/Pagina PRODUCTOS/Caj18RosFer.html">
-                    <img src="imagenes/PRODUCTOS/Caj18RosFer.jpg" alt="" >
-                    <a href="#"> Caja 18 Rosas Ferrero</a></a>
+            <a href="Paginas/Pagina PRODUCTOS/Caj18RosFer.html">
+            <img src="imagenes/PRODUCTOS/Caj18RosFer.jpg" alt="" >
+            <a href="#"> Caja 18 Rosas Ferrero</a></a>
         </div>
 
         <div class="product-item" category="Rosas">
-                    <a href="Paginas/Pagina PRODUCTOS/Caj25Rosas.html">
-                    <img src="imagenes/PRODUCTOS/Caj25ROS_ROSADAS.jpg" alt="" >
-                    <a href="#"> Caja 25 ROSAS ROSADAS</a></a>
+            <a href="Paginas/Pagina PRODUCTOS/Caj25Rosas.html">
+            <img src="imagenes/PRODUCTOS/Caj25ROS_ROSADAS.jpg" alt="" >
+            <a href="#"> Caja 25 ROSAS ROSADAS</a></a>
         </div>
 
-                        <div class="product-item" category="Rosas">
-                            <a href="Paginas/Pagina PRODUCTOS/CoraFerRosas.html">
-                                <img src="imagenes/PRODUCTOS/CORAZON FERRERO ROSAS.jpg" alt="" >
-                            <a href="#"> Corazon de Rosas Y Ferrero</a></a>
-                        </div>
+        <div class="product-item" category="Rosas">
+            <a href="Paginas/Pagina PRODUCTOS/CoraFerRosas.html">
+            <img src="imagenes/PRODUCTOS/CORAZON FERRERO ROSAS.jpg" alt="" >
+            <a href="#"> Corazon de Rosas Y Ferrero</a></a>
+        </div>
 
-                            <div class="product-item" category="Rosas">
-                                <a href="Paginas/Pagina PRODUCTOS/Caj50RosFer.html">
-                                    <img src="imagenes/PRODUCTOS/Caj50RosFer.jpg" alt="" >
-                                <a href="#"> Caja 50 rosas FERRERO ABIERTO</a></a>
-                            </div>
+        <div class="product-item" category="Rosas">
+            <a href="Paginas/Pagina PRODUCTOS/Caj50RosFer.html">
+            <img src="imagenes/PRODUCTOS/Caj50RosFer.jpg" alt="" >
+            <a href="#"> Caja 50 rosas FERRERO ABIERTO</a></a>
+        </div>
 
-                                <div class="product-item" category="Rosas">
-                                    <a href="Paginas/Pagina PRODUCTOS/MinCajRosPel.html">
-                                    <img src="imagenes/PRODUCTOS/MINI CAJA ROSAS PELUCHE pagina.jpg" alt="" >
-                                    <a href="#"> MINI CAJA ROSAS PELUCHE</a></a>
-                                </div>
+        <div class="product-item" category="Rosas">
+            <a href="Paginas/Pagina PRODUCTOS/MinCajRosPel.html">
+            <img src="imagenes/PRODUCTOS/MINI CAJA ROSAS PELUCHE pagina.jpg" alt="" >
+            <a href="#"> MINI CAJA ROSAS PELUCHE</a></a>
+        </div>
 
 
-                                <!-- FLOREROS -->
+          <!---------------------- FLOREROS --------------------->
 
 
 
@@ -249,11 +253,6 @@
 
             </div>
 
-
-
-
-
-
           <!---------------------- CANASTAS ------------------->
 
             <div class="product-item" category="Canastas">
@@ -291,7 +290,7 @@
             </div>
 
 
-                                <!-- COMESTIBLES -->
+               <!---------------- COMESTIBLES -------------->
 
             <div class="product-item" category="Comestibles">
                 <img src="imagenes/PRODUCTOS/BANDEJA  TE QUIERO.jpg" alt="" >
@@ -300,24 +299,14 @@
 
 
 
-                                <!-- DESAYUNOS -->
+             <!------------------ DESAYUNOS --------------------->
 
 
             <div class="product-item" category="Desayunos">
                 <img src="imagenes/PRODUCTOS/desayuno.jpg" alt="" >
                 <a href="#"> Desayuno</a>
             </div>
-
-
-
-
-
-
-
-
-
-
-        </section>
+    </section>
 
 
 
@@ -325,15 +314,8 @@
 
         <!--------------- FOOTER  ------------------>
 
-
-
-
    <footer>
-                <a href="http://aflorar.com.ar"> Visita nuestro WEB OFICIAL AFLORAR</a>
-
-
-
-
+        <a href="http://aflorar.com.ar"> Visita nuestro WEB OFICIAL AFLORAR</a>
         <p>Floreria en linea, venta de flores en Ramos / Floreros / Desayunos y Meriendas /
            Chocolates / Peluches / Vinos y más</p>
 
@@ -342,14 +324,12 @@
             Efectivo
         </side>
 
-            <side>
+        <side>
             Derechos Reservados 2022
         </side>
 
         </footer>
-    </body>
-
-
-
+    
+</body>
 
 </html>
