--- a/Paginas/Pagina Header/fechas_especiales.html
+++ b/Paginas/Pagina Header/fechas_especiales.html
@@ -65,13 +65,13 @@
               </div>
               <div class="carousel-inner">
                 <div class="carousel-item active">
-                  <img src="IMAGENES/EnvioFlores_PNG.png" class="d-flex" alt="...">
+                  <img src="../../imagenes/EnvioFlores_PNG.png" class="d-flex" alt="...">
                 </div>
                 <div class="carousel-item">
-                  <img src="IMAGENES/EnvioFlores_2.png" class="d-flex" alt="...">
+                  <img src="../../imagenes/EnvioFlores_3.png" class="d-flex" alt="...">
                 </div>
                 <div class="carousel-item">
-                  <img src="imagenes/EnvioFlores_4.png" class="d-flex" alt="...">
+                  <img src="../../imagenes/EnvioFlores_4.png" class="d-flex" alt="...">
                 </div>
               </div>
               <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
