--- a/index.html
+++ b/index.html
@@ -12,8 +12,13 @@
         <meta name="keywords" content="envio de flores, latin flores, flores express, floreria en linea, enviar flores, argentina, Floreria capital federal, floreria buenos aires, enviar express, chocolates, peluches, osos, regalos flores, flores regalos, flores buenos aires, flores capital federal"/>
         <meta charset="utf-8"/>
 
+        
+
+        <!-- LINK DE SASS -->
+        <link rel="stylesheet" href="CSS/destino.css">
+
         <link rel="stylesheet" href="font.css">
-        <link rel="stylesheet" href="Estilos.CSS">
+
 
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 
@@ -118,10 +123,10 @@
     <section id="Categoria" class="border">
         <div class="category_list">
             <a href="#" class="category_item ct_item-active" category="TODOS"> TODOS</a>
-            <a href="#" class="Category_item" category="Rosas"> Rosas</a>
-            <a href="#" class="Category_item" category="Floreros"> Floreros</a>
-            <a href="#" class="Category_item" category="Canastas"> Canastas</a>
-            <a href="#" class="Category_item" category="Comestibles"> Comestibles</a>
+            <a href="Paginas/Pagina_Categorias/rosas.html" class="Category_item" category="Rosas"> Rosas</a>
+            <a href="Paginas/Pagina_Categorias/floreros.html" class="Category_item" category="Floreros"> Floreros</a>
+            <a href="Paginas/Pagina_Categorias/canastas.html" class="Category_item" category="Canastas"> Canastas</a>
+            <a href="Paginas/Pagina_Categorias/comestibles.html" class="Category_item" category="Comestibles"> Comestibles</a>
             <a href="#" class="Category_item" category="Desayunos"> Desayunos</a>
         </div>
 
@@ -133,25 +138,6 @@
 
     <!-- fin categorias -->
 
-    <!-- OCACIONES -->
-
-<section id="Categoria" class="border">
-
-
-    <div class="category_list">
-        <a href="#" class="category_item ct_item-active" category="TODOS"> Casamiento</a>
-        <a href="#" class="Category_item" category="Rosas"> Condolencias</a>
-        <a href="#" class="Category_item" category="Floreros"> Nacimiento</a>
-        <a href="#" class="Category_item" category="Canastas"> Feliz Cumpleaños</a>
-        <a href="#" class="Category_item" category="Comestibles"> San Valentin</a>
-        <a href="#" class="Category_item" category="Desayunos"> Dia de la madre</a>
-</div>
-
-
-
-    </nav>
-
-</section>
 
 <!-- fin ocaciones -->
 
