SASS y todas las pags linkeadas
termine de linkear todos los htmls para que cada boton tenga funcionalidad.

--- a/Paginas/Pagina Header/Como_comprar.html
+++ b/Paginas/Pagina Header/Como_comprar.html
@@ -113,28 +113,25 @@
 
 
 
-        <nav class="border">Elija una Categoria
+  <nav class="border">Elija una Categoria
+
+    <section id="Categoria" class="border">
 
 
+          <div class="category_list">
+            <a href="../../index.html" class="category_item" category="TODOS"> TODOS</a>
+            <a href="../Pagina_Categorias/rosas.html" class="Category_item" category="Rosas"> Rosas</a>
+            <a href="../Pagina_Categorias/floreros.html" class="Category_item" category="Floreros"> Floreros</a>
+            <a href="../Pagina_Categorias/canastas.html" class="Category_item" category="Canastas"> Canastas</a>
+            <a href="../Pagina_Categorias/comestibles.html" class="Category_item" category="Comestibles"> Comestibles</a>
+            <a href="../Pagina_Categorias/desayunos.html" class="Category_item" category="Desayunos"> Desayunos</a>
+        </div>
+
+    </section>
+
+    </nav>
 
 
-        <section id="Categoria" class="border">
-
-
-        <div class="category_list">
-            <a href="#" class="category_item ct_item-active" category="TODOS"> TODOS</a>
-            <a href="#" class="Category_item" category="Rosas"> Rosas</a>
-            <a href="#" class="Category_item" category="Floreros"> Floreros</a>
-            <a href="#" class="Category_item" category="Canastas"> Canastas</a>
-            <a href="#" class="Category_item" category="Comestibles"> Comestibles</a>
-            <a href="#" class="Category_item" category="Desayunos"> Desayunos</a>
-    </div>
-
-
-
-        </nav>
-
-</section>
 
 
 
