--- a/Paginas/Pagina_Categorias/canastas.html
+++ b/Paginas/Pagina_Categorias/canastas.html
@@ -41,14 +41,14 @@
         <nav class="secciondearriba">
 
 
-            <div class="Seccion"><a href="Index.HTML"><li>NOSOTROS</li></div></a> 
-            <div class="Seccion"><li><a href="Paginas/Pagina Header/fechas_especiales.html"> Fechas Especiales </a></li></div>
+            <div class="Seccion"><a href="../../Index.HTML"><li>NOSOTROS</li></div></a> 
+            <div class="Seccion"><li><a href="../../Paginas/Pagina Header/fechas_especiales.html"> Fechas Especiales </a></li></div>
 
-            <div class="Seccion"><li><a href="paginas/Pagina Header/Costos_envio.html">Costos de envio</a></li></div>
+            <div class="Seccion"><li><a href="../../paginas/Pagina Header/Costos_envio.html">Costos de envio</a></li></div>
 
-            <div class="Seccion"> <li><a href="Paginas/Pagina Header/Como_comprar.html">¿Como comprar?</a></li></div>
+            <div class="Seccion"> <li><a href="../../Paginas/Pagina Header/Como_comprar.html">¿Como comprar?</a></li></div>
 
-            <div class="Seccion"> <li><a href="Paginas/Pagina Header/Registrate.html"> Registrate</a></li> </div>
+            <div class="Seccion"> <li><a href="../../Paginas/Pagina Header/Registrate.html"> Registrate</a></li> </div>
             
                 <span class="btn_menu">
                     <i class="bi bi-list"></i>
@@ -123,11 +123,11 @@
     <section id="Categoria" class="border">
         <div class="category_list">
             <a href="../../index.html" class="category_item" category="TODOS"> TODOS</a>
-            <a href="../Paginas/Pagina_Categorias/rosas.html" class="Category_item" category="Rosas"> Rosas</a>
-            <a href="../Pagina_Categorias/floreros.html" class="Category_item" category="Floreros"> Floreros</a>
-            <a href="../Pagina_Categorias/canastas.html" class="Category_item ct_item-active" category="Canastas"> Canastas</a>
-            <a href="../Pagina_Categorias/comestibles.html" class="Category_item" category="Comestibles"> Comestibles</a>
-            <a href="../Pagina_Categorias/desayunos.html" class="Category_item" category="Desayunos"> Desayunos</a>
+            <a href="../../Paginas/Pagina_Categorias/rosas.html" class="Category_item" category="Rosas"> Rosas</a>
+            <a href="../../Paginas/Pagina_Categorias/floreros.html" class="Category_item" category="Floreros"> Floreros</a>
+            <a href="../../Pagina_Categorias/canastas.html" class="Category_item ct_item-active" category="Canastas"> Canastas</a>
+            <a href="../../Pagina_Categorias/comestibles.html" class="Category_item" category="Comestibles"> Comestibles</a>
+            <a href="../../Pagina_Categorias/desayunos.html" class="Category_item" category="Desayunos"> Desayunos</a>
         </div>
 
 
