--- a/Paginas/Pagina_Categorias/canastas.html
+++ b/Paginas/Pagina_Categorias/canastas.html
@@ -123,11 +123,11 @@
     <section id="Categoria" class="border">
         <div class="category_list">
             <a href="../../index.html" class="category_item" category="TODOS"> TODOS</a>
-            <a href="../../Paginas/Pagina_Categorias/rosas.html" class="Category_item" category="Rosas"> Rosas</a>
-            <a href="../../Paginas/Pagina_Categorias/floreros.html" class="Category_item" category="Floreros"> Floreros</a>
-            <a href="../../Pagina_Categorias/canastas.html" class="Category_item ct_item-active" category="Canastas"> Canastas</a>
-            <a href="../../Pagina_Categorias/comestibles.html" class="Category_item" category="Comestibles"> Comestibles</a>
-            <a href="../../Pagina_Categorias/desayunos.html" class="Category_item" category="Desayunos"> Desayunos</a>
+            <a href="rosas.html" class="Category_item" category="Rosas"> Rosas</a>
+            <a href="floreros.html" class="Category_item" category="Floreros"> Floreros</a>
+            <a href="canastas.html" class="Category_item ct_item-active" category="Canastas"> Canastas</a>
+            <a href="comestibles.html" class="Category_item" category="Comestibles"> Comestibles</a>
+            <a href="desayunos.html" class="Category_item" category="Desayunos"> Desayunos</a>
         </div>
 
 
@@ -142,65 +142,49 @@
 <!-- fin ocaciones -->
 
                 <!-- PRODUCTOS -->
-
-
-    <section id="Productos" class="ListadeProductos">
-
-        <div class="product-item" category="Canastas">
-            <img src="../../imagenes/PRODUCTOS/CANASTA 24 ROSAS Y BOMBNES.jpg" alt="" >
-            <a href="#">Canasta de 24 rosas con BOMBONES</a>
-
-        </div>
-        <div class="product-item" category="Canastas">
-            <img src="../../imagenes/PRODUCTOS/CANASTA 24 ROSAS SIN BOMBONES.jpg" alt="" >
-            <a href="#">Canasta de 24 rosas SIN BOMBONES</a>
-
-        </div>
-        <div class="product-item" category="Canastas">
-            <img src="../../imagenes/PRODUCTOS/CANASTA FLORES BLANCAS ESTACION.jpg" alt="" >
-            <a href="#">Canasta de Flores Blancas de Estacion</a>
-
-        </div>
-
-
-        </div>
-        <div class="product-item" category="Canastas">
-            <img src="../../imagenes/PRODUCTOS/Canasta Gerberas y Rosas.jpg" alt="" >
-            <a href="#">Canasta de Gerberas y Rosas</a>
-
-        </div>
-        <div class="product-item" category="Canastas">
-            <img src="../../imagenes/PRODUCTOS/Canasta rosas y lilium.jpg" alt="" >
-            <a href="#">Canasta Rosas y Lilium</a>
-
-        </div>
-        <div class="product-item" category="Canastas">
-            <img src="../../imagenes/PRODUCTOS/Canasta Jazmines.jpg" alt="" >
-            <a href="#">Canasta de Jazmines</a>
-
-        </div>
-
-
-    </section>
+<section id="Productos" class="ListadeProductos">
+    <div class="product-item" category="Canastas">
+        <img src="../../imagenes/PRODUCTOS/CANASTA 24 ROSAS Y BOMBNES.jpg" alt="" >
+        <a href="#">Canasta de 24 rosas con BOMBONES</a>
+    </div>
+    <div class="product-item" category="Canastas">
+        <img src="../../imagenes/PRODUCTOS/CANASTA 24 ROSAS SIN BOMBONES.jpg" alt="" >
+        <a href="#">Canasta de 24 rosas SIN BOMBONES</a>
+    </div>
+    <div class="product-item" category="Canastas">
+        <img src="../../imagenes/PRODUCTOS/CANASTA FLORES BLANCAS ESTACION.jpg" alt="" >
+        <a href="#">Canasta de Flores Blancas de Estacion</a>
+    </div>
+    <div class="product-item" category="Canastas">
+        <img src="../../imagenes/PRODUCTOS/Canasta Gerberas y Rosas.jpg" alt="" >
+        <a href="#">Canasta de Gerberas y Rosas</a>
+    </div>
+    <div class="product-item" category="Canastas">
+        <img src="../../imagenes/PRODUCTOS/Canasta rosas y lilium.jpg" alt="" >
+        <a href="#">Canasta Rosas y Lilium</a>
+    </div>
+    <div class="product-item" category="Canastas">
+        <img src="../../imagenes/PRODUCTOS/Canasta Jazmines.jpg" alt="" >
+        <a href="#">Canasta de Jazmines</a>
+    </div>
+</section>
 
 
         <!--------------- FOOTER  ------------------>
 
-   <footer>
-        <a href="http://aflorar.com.ar"> Visita nuestro WEB OFICIAL AFLORAR</a>
-        <p>Floreria en linea, venta de flores en Ramos / Floreros / Desayunos y Meriendas /
-           Chocolates / Peluches / Vinos y más</p>
+<footer>
+    <a href="http://aflorar.com.ar"> Visita nuestro WEB OFICIAL AFLORAR</a>
+    <p>Floreria en linea, venta de flores en Ramos / Floreros / Desayunos y Meriendas /
+       Chocolates / Peluches / Vinos y más</p>
 
-        <side>
-            Todos los medios de pago. Paypal, Mercado Pago, Tarjeta de Credito,
-            Efectivo
-        </side>
-
-        <side>
-            Derechos Reservados 2022
-        </side>
-
-        </footer>
+    <aside>
+       Todos los medios de pago. Paypal, Mercado Pago, Tarjeta de Credito,
+        Efectivo
+    </aside>
+    <aside>
+         Derechos Reservados 2022
+    </aside>
+</footer>
     
 </body>
 
