--- a/Paginas/Pagina_Categorias/desayunos.html
+++ b/Paginas/Pagina_Categorias/desayunos.html
@@ -123,11 +123,11 @@
     <section id="Categoria" class="border">
         <div class="category_list">
             <a href="../../index.html" class="category_item" category="TODOS"> TODOS</a>
-            <a href="../Pagina_Categorias/rosas.html" class="Category_item" category="Rosas"> Rosas</a>
-            <a href="../Pagina_Categorias/floreros.html" class="Category_item" category="Floreros"> Floreros</a>
-            <a href="../Pagina_Categorias/canastas.html" class="Category_item" category="Canastas"> Canastas</a>
-            <a href="../Pagina_Categorias/comestibles.html" class="Category_item" category="Comestibles"> Comestibles</a>
-            <a href="../Pagina_Categorias/desayunos.html" class="Category_item ct_item-active" category="Desayunos"> Desayunos</a>
+            <a href="rosas.html" class="Category_item" category="Rosas"> Rosas</a>
+            <a href="floreros.html" class="Category_item" category="Floreros"> Floreros</a>
+            <a href="canastas.html" class="Category_item" category="Canastas"> Canastas</a>
+            <a href="comestibles.html" class="Category_item" category="Comestibles"> Comestibles</a>
+            <a href="desayunos.html" class="Category_item ct_item-active" category="Desayunos"> Desayunos</a>
         </div>
 
     </section>
