--- a/Paginas/Pagina Header/Como_comprar.html
+++ b/Paginas/Pagina Header/Como_comprar.html
@@ -30,7 +30,7 @@
 
   <header class="border">
   <ol class="secciondearriba">
-  <div class="Seccion"><a href="../../Index.HTML"><li>INICIO</li></div></a> 
+  <div class="Seccion"><a href="../../index.html"><li>INICIO</li></div></a> 
   <div class="Seccion"><li><a href="fechas_especiales.html"> Fechas Especiales </a></li></div>
   <div class="Seccion"><li><a href="Costos_envio.html">Costos de envio</a></li></div>
   <div class="Seccion"> <li><a href="Como_comprar.html">¿Como comprar?</a></li></div>
