--- a/Paginas/Pagina_Categorias/comestibles.html
+++ b/Paginas/Pagina_Categorias/comestibles.html
@@ -71,10 +71,10 @@
                 </div>
                 <div class="carousel-inner">
                   <div class="carousel-item active">
-                    <img src="../../IMAGENES/EnvioFlores_PNG.png" class="d-flex" alt="...">
+                    <img src="../../imagenes/EnvioFlores_PNG.png" class="d-flex" alt="...">
                   </div>
                   <div class="carousel-item">
-                    <img src="../../IMAGENES/EnvioFlores_2.png" class="d-flex" alt="...">
+                    <img src="../../imagenes/EnvioFlores_2.png" class="d-flex" alt="...">
                   </div>
                   <div class="carousel-item">
                     <img src="../../imagenes/EnvioFlores_4.png" class="d-flex" alt="...">
@@ -119,7 +119,6 @@
     <nav class="NavMenu">Elija una Categoria
 
     <section id="Categoria" class="border">
-        <section id="Categoria" class="border">
             <div class="category_list">
                 <a href="../../index.html" class="category_item" category="TODOS"> TODOS</a>
                 <a href="rosas.html" class="Category_item" category="Rosas"> Rosas</a>
