--- a/Paginas/Pagina Header/Registrate.html
+++ b/Paginas/Pagina Header/Registrate.html
@@ -35,7 +35,7 @@
         <header class="border">
         <ol class="secciondearriba">
 
-            <div class="Seccion"><a href="../../Index.HTML"><li>INICIO</li></div></a> 
+            <div class="Seccion"><a href="../../index.html"><li>INICIO</li></div></a> 
 
             <div class="Seccion"><li><a href="fechas_especiales.html"> Fechas Especiales </a></li></div>
 
