--- a/Paginas/Pagina_Categorias/canastas.html
+++ b/Paginas/Pagina_Categorias/canastas.html
@@ -144,28 +144,28 @@
                 <!-- PRODUCTOS -->
 <section id="Productos" class="ListadeProductos">
     <div class="product-item" category="Canastas">
-        <img src="../../imagenes/PRODUCTOS/CANASTA 24 ROSAS Y BOMBNES.jpg" alt="" >
-        <a href="#">Canasta de 24 rosas con BOMBONES</a>
+        <a href="#"><img src="../../imagenes/PRODUCTOS/CANASTA 24 ROSAS Y BOMBNES.jpg" alt="" >
+        Canasta de 24 rosas con BOMBONES</a>
     </div>
     <div class="product-item" category="Canastas">
-        <img src="../../imagenes/PRODUCTOS/CANASTA 24 ROSAS SIN BOMBONES.jpg" alt="" >
-        <a href="#">Canasta de 24 rosas SIN BOMBONES</a>
+        <a href="#"><img src="../../imagenes/PRODUCTOS/CANASTA 24 ROSAS SIN BOMBONES.jpg" alt="" >
+        Canasta de 24 rosas SIN BOMBONES</a>
     </div>
     <div class="product-item" category="Canastas">
-        <img src="../../imagenes/PRODUCTOS/CANASTA FLORES BLANCAS ESTACION.jpg" alt="" >
-        <a href="#">Canasta de Flores Blancas de Estacion</a>
+        <a href="#"><img src="../../imagenes/PRODUCTOS/CANASTA FLORES BLANCAS ESTACION.jpg" alt="" >
+        Canasta de Flores Blancas de Estacion</a>
     </div>
     <div class="product-item" category="Canastas">
-        <img src="../../imagenes/PRODUCTOS/Canasta Gerberas y Rosas.jpg" alt="" >
-        <a href="#">Canasta de Gerberas y Rosas</a>
+        <a href="#"><img src="../../imagenes/PRODUCTOS/Canasta Gerberas y Rosas.jpg" alt="" >
+        Canasta de Gerberas y Rosas</a>
     </div>
     <div class="product-item" category="Canastas">
-        <img src="../../imagenes/PRODUCTOS/Canasta rosas y lilium.jpg" alt="" >
-        <a href="#">Canasta Rosas y Lilium</a>
+        <a href="#"><img src="../../imagenes/PRODUCTOS/Canasta rosas y lilium.jpg" alt="" >
+        Canasta Rosas y Lilium</a>
     </div>
     <div class="product-item" category="Canastas">
-        <img src="../../imagenes/PRODUCTOS/Canasta Jazmines.jpg" alt="" >
-        <a href="#">Canasta de Jazmines</a>
+        <a href="#"><img src="../../imagenes/PRODUCTOS/Canasta Jazmines.jpg" alt="" >
+        Canasta de Jazmines</a>
     </div>
 </section>
 
