--- a/Paginas/Pagina_Categorias/comestibles.html
+++ b/Paginas/Pagina_Categorias/comestibles.html
@@ -147,8 +147,9 @@
                <!---------------- COMESTIBLES -------------->
 
                <div class="product-item" category="Comestibles">
-                <img src="../../imagenes/PRODUCTOS/BANDEJA  TE QUIERO.jpg" alt="" >
-                <a href="#">Bandeja Te Quiero</a>
+                <a href="#">
+                  <img src="../../imagenes/PRODUCTOS/BANDEJA  TE QUIERO.jpg" alt="" >
+                Bandeja Te Quiero</a>
             </div>
 
 
