--- a/Paginas/Pagina_Categorias/desayunos.html
+++ b/Paginas/Pagina_Categorias/desayunos.html
@@ -152,8 +152,8 @@
 
 
              <div class="product-item" category="Desayunos">
-                <img src="../../imagenes/PRODUCTOS/desayuno.jpg" alt="" >
-                <a href="#"> Desayuno</a>
+              <a href="#">  <img src="../../imagenes/PRODUCTOS/desayuno.jpg" alt="" >
+                 Desayuno</a>
             </div>
 
     </section>
