--- a/Paginas/Pagina_Categorias/floreros.html
+++ b/Paginas/Pagina_Categorias/floreros.html
@@ -153,50 +153,56 @@
          <div class="product-item" category="Floreros">
             <a href="../../Paginas/Pagina PRODUCTOS/FloRosLilGer.html">
             <img src="../../imagenes/PRODUCTOS/Florero con Rosas, Lilium y Gerberas.jpg" alt="" >
-            <a href="#">Florero con Rosas, Lilium y Gerberas</a></a>
+           Florero con Rosas, Lilium y Gerberas</a>
 
         </div>
         <div class="product-item" category="Floreros">
             <a href="../../Paginas/Pagina PRODUCTOS/FloRosItaliano.html">
             <img src="../../imagenes/PRODUCTOS/Florero Imperial ROSAS.jpg" alt="" >
-            <a href="#">Florero con Rosas Italiano</a></a>
+           Florero con Rosas Italiano</a>
 
         </div>
         <div class="product-item" category="Floreros">
             <a href="../../Paginas/Pagina PRODUCTOS/FloRosRosadas.html">
             <img src="../../imagenes/PRODUCTOS/Florero Rosas Rosadas.jpg" alt="" >
-            <a href="#">Florero Rosas Rosadas</a></a>
+           Florero Rosas Rosadas</a>
 
         </div>
         <div class="product-item" category="Floreros">
-            <img src="../../imagenes/PRODUCTOS/Florero LISIANTHUS PREMIUM.jpg" alt="" >
-            <a href="#">Florero Lisianthus Premium</a>
+            <a href="#">
+                 <img src="../../imagenes/PRODUCTOS/Florero LISIANTHUS PREMIUM.jpg" alt="" >
+           Florero Lisianthus Premium</a>
 
         </div>
         <div class="product-item" category="Floreros">
-            <img src="../../imagenes/PRODUCTOS/Florero Rosas Amarillas.jpg" alt="" >
-            <a href="#">Florero Rosas Amarillas</a>
+            <a href="#">  
+                <img src="../../imagenes/PRODUCTOS/Florero Rosas Amarillas.jpg" alt="" >
+           Florero Rosas Amarillas</a>
 
         </div>
         <div class="product-item" category="Floreros">
-            <img src="../../imagenes/PRODUCTOS/exquisito florero.jpg" alt="" >
-            <a href="#"> Exquisito Florero</a>
+            <a href="#"> 
+                 <img src="../../imagenes/PRODUCTOS/exquisito florero.jpg" alt="" >
+            Exquisito Florero</a>
 
         </div>
         <div class="product-item" category="Floreros">
-            <img src="../../imagenes/PRODUCTOS/florero GERBERAS.jpg" alt="" >
-            <a href="#">Florero Gerberas</a>
+            <a href="#">  
+                <img src="../../imagenes/PRODUCTOS/florero GERBERAS.jpg" alt="" >
+           Florero Gerberas</a>
 
         </div>
         <div class="product-item" category="Floreros">
-            <img src="../../imagenes/PRODUCTOS/Florero 6 Liliums.jpg" alt="" >
-            <a href="#">Florero de 6 Liliums</a>
+            <a href="#">  
+                <img src="../../imagenes/PRODUCTOS/Florero 6 Liliums.jpg" alt="" >
+           Florero de 6 Liliums</a>
 
         </div>
 
         <div class="product-item" category="Floreros">
-            <img src="../../imagenes/PRODUCTOS/florero rsas y astromelias.jpg" alt="" >
-            <a href="#">Florero con Rosas Astromelias</a>
+            <a href="#">   
+                <img src="../../imagenes/PRODUCTOS/florero rsas y astromelias.jpg" alt="" >
+           Florero con Rosas Astromelias</a>
 
         </div>
 
