--- a/Paginas/Pagina_Categorias/rosas.html
+++ b/Paginas/Pagina_Categorias/rosas.html
@@ -148,37 +148,37 @@
         <div class="product-item" category="Rosas">
             <a href="../../Paginas\Pagina PRODUCTOS/CajFerRosDiam.HTML">
             <img src="../../imagenes/PRODUCTOS/Caja Ferrero Rosas diamante.jpg" alt="" >
-            <a href="#"> Caja Rosas Diamante con Ferrero Rocher</a></a>
+             Caja Rosas Diamante con Ferrero Rocher</a>
         </div>
 
         <div class="product-item" category="Rosas">
             <a href="../../Paginas/Pagina PRODUCTOS/Caj18RosFer.html">
             <img src="../../imagenes/PRODUCTOS/Caj18RosFer.jpg" alt="" >
-            <a href="#"> Caja 18 Rosas Ferrero</a></a>
+             Caja 18 Rosas Ferrero</a>
         </div>
 
         <div class="product-item" category="Rosas">
             <a href="../../Paginas/Pagina PRODUCTOS/Caj25Rosas.html">
             <img src="../../imagenes/PRODUCTOS/Caj25ROS_ROSADAS.jpg" alt="" >
-            <a href="#"> Caja 25 ROSAS ROSADAS</a></a>
+             Caja 25 ROSAS ROSADAS</a>
         </div>
 
         <div class="product-item" category="Rosas">
             <a href="../../Paginas/Pagina PRODUCTOS/CoraFerRosas.html">
             <img src="../../imagenes/PRODUCTOS/CORAZON FERRERO ROSAS.jpg" alt="" >
-            <a href="#"> Corazon de Rosas Y Ferrero</a></a>
+             Corazon de Rosas Y Ferrero</a>
         </div>
 
         <div class="product-item" category="Rosas">
             <a href="../../Paginas/Pagina PRODUCTOS/Caj50RosFer.html">
             <img src="../../imagenes/PRODUCTOS/Caj50RosFer.jpg" alt="" >
-            <a href="#"> Caja 50 rosas FERRERO ABIERTO</a></a>
+             Caja 50 rosas FERRERO ABIERTO</a>
         </div>
 
         <div class="product-item" category="Rosas">
             <a href="../../Paginas/Pagina PRODUCTOS/MinCajRosPel.html">
             <img src="../../imagenes/PRODUCTOS/MINI CAJA ROSAS PELUCHE pagina.jpg" alt="" >
-            <a href="#"> MINI CAJA ROSAS PELUCHE</a></a>
+             MINI CAJA ROSAS PELUCHE</a>
         </div>
 
 
