--- a/index.html
+++ b/index.html
@@ -121,32 +121,32 @@
     <div class="product-item" category="Rosas">
         <a href="Paginas\Pagina PRODUCTOS/CajFerRosDiam.HTML">
             <img src="imagenes/PRODUCTOS/Caja Ferrero Rosas diamante.jpg" alt="Caja Rosas Diamante con Ferrero Rocher" >
-        <a href="#"> Caja Rosas Diamante con Ferrero Rocher</a></a>
+            Caja Rosas Diamante con Ferrero Rocher</a>
     </div>
     <div class="product-item" category="Rosas">
         <a href="Paginas/Pagina PRODUCTOS/Caj18RosFer.html">
             <img src="imagenes/PRODUCTOS/Caj18RosFer.jpg" alt="Caja 18 Rosas Ferrero" >
-        <a href="#"> Caja 18 Rosas Ferrero</a></a>
+            Caja 18 Rosas Ferrero</a>
     </div>
     <div class="product-item" category="Rosas">
         <a href="Paginas/Pagina PRODUCTOS/Caj25Rosas.html">
             <img src="imagenes/PRODUCTOS/Caj25ROS_ROSADAS.jpg" alt="caja 25 rosas rosadas" >
-        <a href="#"> Caja 25 ROSAS ROSADAS</a></a>
+            Caja 25 ROSAS ROSADAS</a>
     </div>
     <div class="product-item" category="Rosas">
         <a href="Paginas/Pagina PRODUCTOS/CoraFerRosas.html">
             <img src="imagenes/PRODUCTOS/CORAZON FERRERO ROSAS.jpg" alt="corazon de rosas y ferrero rocher" >
-        <a href="#"> Corazon de Rosas Y Ferrero</a></a>
+             Corazon de Rosas Y Ferrero</a>
     </div>
     <div class="product-item" category="Rosas">
         <a href="Paginas/Pagina PRODUCTOS/Caj50RosFer.html">
             <img src="imagenes/PRODUCTOS/Caj50RosFer.jpg" alt="caja de 50 rosas con ferrero rocher" >
-        <a href="#"> Caja 50 rosas FERRERO ABIERTO</a></a>
+            Caja 50 rosas FERRERO ABIERTO</a>
     </div>
     <div class="product-item" category="Rosas">
         <a href="Paginas/Pagina PRODUCTOS/MinCajRosPel.html">
             <img src="imagenes/PRODUCTOS/MINI CAJA ROSAS PELUCHE pagina.jpg" alt="mini caja rosas con peluche" >
-        <a href="#"> MINI CAJA ROSAS PELUCHE</a></a>
+            MINI CAJA ROSAS PELUCHE</a>
     </div>
 
     <!---------------------- FLOREROS -------------------------->
@@ -154,82 +154,95 @@
     <div class="product-item" category="Floreros">
         <a href="Paginas/Pagina PRODUCTOS/FloRosLilGer.html">
             <img src="imagenes/PRODUCTOS/Florero con Rosas, Lilium y Gerberas.jpg" alt="florero con rosas, lilium y gerberas" >
-        <a href="#">Florero con Rosas, Lilium y Gerberas</a></a>
+            Florero con Rosas, Lilium y Gerberas</a>
     </div>
     <div class="product-item" category="Floreros">
         <a href="Paginas/Pagina PRODUCTOS/FloRosItaliano.html">
             <img src="imagenes/PRODUCTOS/Florero Imperial ROSAS.jpg" alt="Florero con rosas en papel italiano" >
-    <a href="#">Florero con Rosas Italiano</a></a>
+            Florero con Rosas Italiano</a>
     </div>
     <div class="product-item" category="Floreros">
         <a href="Paginas/Pagina PRODUCTOS/FloRosRosadas.html">
             <img src="imagenes/PRODUCTOS/Florero Rosas Rosadas.jpg" alt="florero con rosas rosadas" >
-        <a href="#">Florero Rosas Rosadas</a></a>
+            Florero Rosas Rosadas</a>
     </div>
     <div class="product-item" category="Floreros">
-            <img src="imagenes/PRODUCTOS/Florero LISIANTHUS PREMIUM.jpg" alt="florero con lisianthus Premium" >
-        <a href="#">Florero Lisianthus Premium</a>
+        <a href="#"> <img src="imagenes/PRODUCTOS/Florero LISIANTHUS PREMIUM.jpg" alt="florero con lisianthus Premium" >
+        Florero Lisianthus Premium</a>
     </div>
     <div class="product-item" category="Floreros">
-            <img src="imagenes/PRODUCTOS/Florero Rosas Amarillas.jpg" alt="florero rosas amarillas" >
-        <a href="#">Florero Rosas Amarillas</a>
+      <a href="#">
+                <img src="imagenes/PRODUCTOS/Florero Rosas Amarillas.jpg" alt="florero rosas amarillas" >
+        Florero Rosas Amarillas</a>
     </div>
     <div class="product-item" category="Floreros">
-            <img src="imagenes/PRODUCTOS/exquisito florero.jpg" alt="exquisito florero" >
-        <a href="#"> Exquisito Florero</a>
+      <a href="#">
+                <img src="imagenes/PRODUCTOS/exquisito florero.jpg" alt="exquisito florero" >
+         Exquisito Florero</a>
     </div>
     <div class="product-item" category="Floreros">
-            <img src="imagenes/PRODUCTOS/florero GERBERAS.jpg" alt="florero con gerberas" >
-        <a href="#">Florero Gerberas</a>
+      <a href="#">
+                <img src="imagenes/PRODUCTOS/florero GERBERAS.jpg" alt="florero con gerberas" >
+        Florero Gerberas</a>
     </div>
     <div class="product-item" category="Floreros">
-            <img src="imagenes/PRODUCTOS/Florero 6 Liliums.jpg" alt="florero de 6 liliums " >
-        <a href="#">Florero de 6 Liliums</a>
+      <a href="#">
+                <img src="imagenes/PRODUCTOS/Florero 6 Liliums.jpg" alt="florero de 6 liliums " >
+        Florero de 6 Liliums</a>
     </div>
     <div class="product-item" category="Floreros">
-            <img src="imagenes/PRODUCTOS/florero rsas y astromelias.jpg" alt="florero con rosas y astromelias" >
-        <a href="#">Florero con Rosas y Astromelias</a>
+      <a href="#">
+                <img src="imagenes/PRODUCTOS/florero rsas y astromelias.jpg" alt="florero con rosas y astromelias" >
+        Florero con Rosas y Astromelias</a>
     </div>
 
     <!---------------------- CANASTAS -------------------------------->
     
     <div class="product-item" category="Canastas">
-            <img src="imagenes/PRODUCTOS/CANASTA 24 ROSAS Y BOMBNES.jpg" alt="canasta de 24 rosas con bombones" >
-        <a href="#">Canasta de 24 rosas con BOMBONES</a>
+      <a href="#">
+                <img src="imagenes/PRODUCTOS/CANASTA 24 ROSAS Y BOMBNES.jpg" alt="canasta de 24 rosas con bombones" >
+        Canasta de 24 rosas con BOMBONES</a>
     </div>
     <div class="product-item" category="Canastas">
-            <img src="imagenes/PRODUCTOS/CANASTA 24 ROSAS SIN BOMBONES.jpg" alt="canasta de 24 rosas Sin bombones" >
-        <a href="#">Canasta de 24 rosas SIN BOMBONES</a>
+      <a href="#">
+                <img src="imagenes/PRODUCTOS/CANASTA 24 ROSAS SIN BOMBONES.jpg" alt="canasta de 24 rosas Sin bombones" >
+        Canasta de 24 rosas SIN BOMBONES</a>
     </div>
     <div class="product-item" category="Canastas">
-            <img src="imagenes/PRODUCTOS/CANASTA FLORES BLANCAS ESTACION.jpg" alt="canasta con flores blancas de estacion" >
-        <a href="#">Canasta de Flores Blancas de Estacion</a>
+      <a href="#">
+                <img src="imagenes/PRODUCTOS/CANASTA FLORES BLANCAS ESTACION.jpg" alt="canasta con flores blancas de estacion" >
+        Canasta de Flores Blancas de Estacion</a>
     </div>
     </div>
     <div class="product-item" category="Canastas">
-            <img src="imagenes/PRODUCTOS/Canasta Gerberas y Rosas.jpg" alt="canasta de gerberas y rosas" >
-        <a href="#">Canasta de Gerberas y Rosas</a>
+      <a href="#">
+                <img src="imagenes/PRODUCTOS/Canasta Gerberas y Rosas.jpg" alt="canasta de gerberas y rosas" >
+        Canasta de Gerberas y Rosas</a>
     </div>
     <div class="product-item" category="Canastas">
-            <img src="imagenes/PRODUCTOS/Canasta rosas y lilium.jpg" alt="canasta rosas y lilum" >
-            <a href="#">Canasta Rosas y Lilium</a>
+          <a href="#">
+                <img src="imagenes/PRODUCTOS/Canasta rosas y lilium.jpg" alt="canasta rosas y lilum" >
+            Canasta Rosas y Lilium</a>
     </div>
     <div class="product-item" category="Canastas">
-            <img src="imagenes/PRODUCTOS/Canasta Jazmines.jpg" alt="canasta de jazmines" >
-        <a href="#">Canasta de Jazmines</a>
+      <a href="#">
+                <img src="imagenes/PRODUCTOS/Canasta Jazmines.jpg" alt="canasta de jazmines" >
+        Canasta de Jazmines</a>
     </div>
               
     <!---------------------- COMESTIBLES ----------------------------->
     <div class="product-item" category="Comestibles">
-            <img src="imagenes/PRODUCTOS/BANDEJA  TE QUIERO.jpg" alt="bandeja comestible te quiero" >
-        <a href="#">Bandeja Te Quiero</a>
+      <a href="#">
+                <img src="imagenes/PRODUCTOS/BANDEJA  TE QUIERO.jpg" alt="bandeja comestible te quiero" >
+        Bandeja Te Quiero</a>
     </div>
 
     <!---------------------- DESAYUNOS ------------------------------>
 
     <div class="product-item" category="Desayunos">
-            <img src="imagenes/PRODUCTOS/desayuno.jpg" alt="desayuno" >
-        <a href="#"> Desayuno</a>
+      <a href="#">
+                <img src="imagenes/PRODUCTOS/desayuno.jpg" alt="desayuno" >
+         Desayuno</a>
     </div>
     </section>
 
