proyecto_Casi_terminado
en esta modificacion, termine de ultimar detalles en responsive, organizar todos los htmls y editar los css y sass para darle un mejor aspecto.

--- a/Paginas/finalizarcompra.html
+++ b/Paginas/finalizarcompra.html
@@ -36,7 +36,7 @@
         <header class="border">
         <ol class="secciondearriba">
 
-            <div class="Seccion"><li>NOSOTROS</li></div>
+            <div class="Seccion"><a href="../index.html"><li>NOSOTROS</li></div></a>
 
             <div class="Seccion"><li><a href="../Paginas/Pagina Header/fechas_especiales.html"> Fechas Especiales </a></li></div>
 
@@ -50,7 +50,7 @@
 
          <!-- ICONOS DE FACEBOOK E INSTAGRAM Y LOGO ENVIO FLORES-->
 
-            <div class="social bar">
+            <div class="social-bar">
                     <a href="http://facebook.com/flores.aflorar" class="icon icon-facebook2" target="_blank"></a>
                     <a href="http://instagram.com/aflorar.arg" class="icon icon-instagram" target="_blank"></a>
             </div>
