--- a/Paginas/Pagina Header/Costos_envio.html
+++ b/Paginas/Pagina Header/Costos_envio.html
@@ -38,7 +38,7 @@
   </ol>
   <!-- ICONOS DE FACEBOOK E INSTAGRAM Y LOGO ENVIO FLORES-->
 
-  <div class="social bar">
+  <div class="social-bar">
     <a href="http://facebook.com/flores.aflorar" class="icon icon-facebook" target="_blank"></a>
     <a href="http://instagram.com/aflorar.arg" class="icon icon-instagram" target="_blank"></a>
   </div>
