--- a/Paginas/Pagina PRODUCTOS/FloRosLilGer.html
+++ b/Paginas/Pagina PRODUCTOS/FloRosLilGer.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html5>
 <html lang="es">
     <head>
-        <Title>Envio Flores</Title>
+        <Title>Producto Seleccionado, Florero Rosas Lilium y Gerberas</Title>
         <link rel="shortcut icon" href="favicon (2).ico" type="image/x-icon">
 
         <meta charset="UTF-8">
@@ -91,7 +91,7 @@
     <div id="buscadores">
         <form class="form"  action="">
                 <input type="text" name="Buscar Producto" placeholder="Buscar Producto">
-               <span>Capital Federal</spa}>
+               <span>Capital Federal</span>
                <input type="radio" name="zona de envio" >
                <span>Gran Buenos Aires</span>
                <input type="Radio" name="zona de envio">
