--- a/Paginas/Pagina_Categorias/rosas.html
+++ b/Paginas/Pagina_Categorias/rosas.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html5>
 <html lang="es">
     <head>
-        <Title>Envio Flores</Title>
+        <Title>EnvioFlores, Categorias, Rosas</Title>
         <link rel="shortcut icon" href="favicon (2).ico" type="image/x-icon">
 
         <meta charset="UTF-8">
@@ -103,7 +103,7 @@
         <form class="form"  action="">
             <input type="text" name="Buscar Producto" placeholder="Buscar Producto">
 
-                <span>Capital Federal</spa}>
+                <span>Capital Federal</span>
                <input type="radio" name="zona de envio" >
                <span>Gran Buenos Aires</span>
                <input type="Radio" name="zona de envio">
@@ -118,7 +118,7 @@
 
     <nav class="NavMenu">Elija una Categoria
 
-    <section id="Categoria" class="border">
+    <section id="Categoria">
             <div class="category_list">
                 <a href="../../index.html" class="category_item " category="TODOS"> TODOS</a>
                 <a href="rosas.html" class="Category_item ct_item-active" category="Rosas"> Rosas</a>
