--- a/Paginas/finalizarcompra.html
+++ b/Paginas/finalizarcompra.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html5>
 <html lang="es">
     <head>
-        <Title>Envio Flores</Title>
+        <Title>Envio Flores, Finalizar Compra</Title>
         <link rel="shortcut icon" href="favicon (2).ico" type="image/x-icon">
 
         <meta charset="UTF-8">
@@ -99,7 +99,7 @@
                 <input type="text" name="" placeholder="">
 
 
-               <span>Capital Federal</spa}>
+               <span>Capital Federal</span>
                <input type="radio" name="zona de envio" >
                <span>Gran Buenos Aires</span>
                <input type="Radio" name="zona de envio">
