--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <header class="border">
         <nav class="secciondearriba">
 
-            <div class="Seccion"><a href="index.html"><li>NOSOTROS</li></div></a> 
+            <div class="Seccion"><a href="index.html"><li>NOSOTROS</li></a></div> 
             <div class="Seccion"><li><a href="Paginas/Pagina Header/fechas_especiales.html"> Fechas Especiales </a></li></div>
             <div class="Seccion"><li><a href="paginas/Pagina Header/Costos_envio.html">Costos de envio</a></li></div>
             <div class="Seccion"> <li><a href="Paginas/Pagina Header/Como_comprar.html">¿Como comprar?</a></li></div>
@@ -89,7 +89,7 @@
     <div id="buscadores">
         <form class="form"  action="">
             <input type="text" name="Buscar Producto" placeholder="Buscar Producto">
-            <span>Capital Federal</spa}>
+            <span>Capital Federal</span>
             <input type="radio" name="zona de envio" >
             <span>Gran Buenos Aires</span>
             <input type="Radio" name="zona de envio">
