--- a/Paginas/Pagina Header/Registrate.html
+++ b/Paginas/Pagina Header/Registrate.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html5>
 <html lang="es">
     <head>
-        <Title>Envio Flores</Title>
+        <Title>Envio Flores, Registrate</Title>
         <link rel="shortcut icon" href="favicon (2).ico" type="image/x-icon">
 
         <meta charset="UTF-8">
@@ -96,9 +96,7 @@
             <div id="buscadores">
             <form class="form"  action="">
                 <input type="text" name="Buscar Producto" placeholder="Buscar Producto">
-
-
-               <span>Capital Federal</spa}>
+               <span>Capital Federal</span>
                <input type="radio" name="zona de envio" >
                <span>Gran Buenos Aires</span>
                <input type="Radio" name="zona de envio">
