--- a/Paginas/Pagina PRODUCTOS/Caj50RosFer.html
+++ b/Paginas/Pagina PRODUCTOS/Caj50RosFer.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html5>
 <html lang="es">
     <head>
-        <Title>Envio Flores</Title>
+        <Title>Producto Seleccionado, Caja 50 Rosas con Ferrero Rocher</Title>
         <link rel="shortcut icon" href="favicon (2).ico" type="image/x-icon">
 
         <meta charset="UTF-8">
@@ -91,7 +91,7 @@
                 <input type="text" name="Buscar Producto" placeholder="Buscar Producto">
 
 
-               <span>Capital Federal</spa}>
+               <span>Capital Federal</span>
                <input type="radio" name="zona de envio" >
                <span>Gran Buenos Aires</span>
                <input type="Radio" name="zona de envio">
