--- a/index.html
+++ b/index.html
@@ -26,6 +26,9 @@
         @import url('https://fonts.googleapis.com/css2?family=Fleur+De+Leah&display=swap');
     </style>
 
+    <!------- LINK DE SITEMAP -------->
+    <link rel="stylesheet" href="sitemap.xml">
+    
 </head>
 
     <!----------- BODY  ----------->   
