--- a/Paginas/Pagina_productos/FloRosLilGer.html
+++ b/Paginas/Pagina_productos/FloRosLilGer.html
@@ -49,7 +49,7 @@
          <!-- ICONOS DE FACEBOOK E INSTAGRAM Y LOGO ENVIO FLORES-->
 
             <div class="social bar">
-                    <a href="http://facebook.com/flores.aflorar" class="icon icon-facebook" target="_blank"></a>
+                    <a href="http://facebook.com/flores.aflorar" class="icon icon-facebook2" target="_blank"></a>
                     <a href="http://instagram.com/aflorar.arg" class="icon icon-instagram" target="_blank"></a>
             </div>
 
@@ -132,8 +132,8 @@
 
             <form class="CANTIDADROSAS">
                 <select name="Cantidad de Rosas" id="Cantidad de rosas"> 
-                    <option value="9"> 9 Rosas Diamante </option>
-                    <option value="12"> 12 Rosas Diamante </option>
+                    <option value="4"> 4 Rosas Diamante </option>
+                    <option value="6"> 6 Rosas Diamante </option>
                 </select>
             </form>
 
