--- a/Paginas/Pagina_header/fechas_especiales.html
+++ b/Paginas/Pagina_header/fechas_especiales.html
@@ -2,8 +2,7 @@
 <html lang="es">
 <head>
   <Title>Envio Flores, Fechas Especiales</Title>
-  <link rel="shortcut icon" href="favicon (2).ico" type="image/x-icon">
-
+  <link rel="shortcut icon" href="../../favicon (2).ico" type="image/x-icon">
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
   <meta name="description" content="envio de flores, latin flores, flores express, floreria en linea, enviar flores, argentina, flores buenos aires, flores capital federal" />
