--- a/Paginas/Pagina_productos/Caj25Rosas.html
+++ b/Paginas/Pagina_productos/Caj25Rosas.html
@@ -2,8 +2,7 @@
 <html lang="es">
     <head>
         <Title>Producto Seleccionado, Caja 25 Rosas y Ferrero Rocher</Title>
-        <link rel="shortcut icon" href="favicon (2).ico" type="image/x-icon">
-
+        <link rel="shortcut icon" href="../../favicon (2).ico" type="image/x-icon">
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
 
